big refactor of base class, work in progress, passes all old tests at this point

--- a/devtools/design_experiments/interface_v2.ipynb
+++ b/devtools/design_experiments/interface_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-112 100.51\n",
-      "2 102.17\n",
-      "23 101.31\n",
-      "24 101.39\n",
-      "-150 100.22\n",
-      "81 101.4\n",
-      "-197 102.11\n",
-      "135 101.51\n",
-      "-165 100.38\n",
-      "50 99.71\n"
+      "20 99.96\n",
+      "107 99.41\n",
+      "-16 99.58\n",
+      "80 101.65\n",
+      "-20 102.21\n",
+      "149 101.21\n",
+      "-39 100.36\n",
+      "-233 99.85\n",
+      "52 98.6\n",
+      "152 97.48\n"
      ]
     }
    ],
@@ -56,6 +56,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.56\n",
+      "101.51\n",
+      "100.62\n",
+      "100.99\n",
+      "100.52\n",
+      "98.6\n",
+      "100.0\n",
+      "101.15\n",
+      "102.37\n",
+      "102.62\n",
+      "we have an async_generator\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unsupported input type for call: [<class 'async_generator'>]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscreamer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RollingMean\n\u001b[1;32m     15\u001b[0m obj \u001b[38;5;241m=\u001b[39m RollingMean(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[43mobj\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprice_feed\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(x)\n",
+      "\u001b[0;31mValueError\u001b[0m: Unsupported input type for call: [<class 'async_generator'>]"
+     ]
+    }
+   ],
+   "source": [
+    "async def price_feed(num_trade=10):\n",
+    "    price = 100\n",
+    "    for _ in range(num_trade):\n",
+    "        price *= np.exp(np.random.normal(scale=0.01))\n",
+    "        price = float(np.round(price, 2))\n",
+    "        yield price\n",
+    "        dt = np.random.uniform(0, 0.2)\n",
+    "        await asyncio.sleep(dt)\n",
+    "\n",
+    "async for  p in price_feed():\n",
+    "    print(p)\n",
+    "    \n",
+    "from screamer import RollingMean\n",
+    "\n",
+    "obj = RollingMean(10)\n",
+    "for x in obj(price_feed(30)):\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +144,7 @@
     "    # generic code: handeling generator of tuples\n",
     "    def process_generator(self, values_gen):\n",
     "        for values in values_gen:\n",
+    "            # check that values has N elements, all convertable to double\n",
     "            yield self.process_scalar(*values)\n",
     "\n",
     "    # generic code: handeling numpy arrays\n",
@@ -94,17 +156,23 @@
     "\n",
     "    # generic code: handeling an asynchronous generator of tuples\n",
     "    async def process_async_generator(self, async_values_gen):\n",
+    "        print(type(async_values_gen))\n",
     "        async for values in async_values_gen:\n",
+    "            # check that values has N elements, all convertable to double\n",
     "            yield self.process_scalar(*values)  \n",
     "        \n",
     "    # generic code: dispatcher\n",
     "    def __call__(self, arg0, arg1=None):\n",
     "        if isinstance(arg0, np.ndarray):\n",
+    "            # check that we have N args, all numpy array, all of the same shape\n",
     "            return self.process_numpy_arrays(arg0, arg1)\n",
     "        if isinstance(arg0, Iterable):\n",
+    "            # check that we have 1 arg\n",
     "            return self.process_generator(arg0)\n",
     "        if inspect.isasyncgen(arg0):\n",
+    "            # check that we have 1 arg\n",
     "            return self.process_async_generator(arg0)\n",
+    "        # check that we have N args, all convertable to double\n",
     "        return self.process_scalar(arg0, arg1)\n"
    ]
   },
@@ -117,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +194,7 @@
        "12"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +223,7 @@
        "array([300, 101, 204, 101])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +254,7 @@
        "[600, 101, 204, 101]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,23 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8947.17\n",
-      "7129.82\n",
-      "4377.4\n",
-      "1622.72\n",
-      "20653.75\n",
-      "5799.179999999999\n",
-      "12781.44\n",
-      "11806.47\n",
-      "2379.84\n",
-      "5520.9\n"
+      "<class 'async_generator'>\n",
+      "4790.4\n",
+      "5604.8099999999995\n",
+      "7782.29\n",
+      "1486.3500000000001\n",
+      "20843.57\n",
+      "3115.5\n",
+      "24330.68\n",
+      "5608.96\n",
+      "13257.44\n",
+      "1665.66\n"
      ]
     }
    ],
@@ -233,6 +302,66 @@
     "async for c in cf(trade_feed()):\n",
     "    print(c)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsupported input type for call: [<class 'async_generator'>]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unsupported input type for call",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscreamer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RollingMean\n\u001b[1;32m      3\u001b[0m obj \u001b[38;5;241m=\u001b[39m RollingMean(\u001b[38;5;241m30\u001b[39m, start_policy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexpanding\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[43mobj\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrade_feed\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(c)\n",
+      "\u001b[0;31mValueError\u001b[0m: Unsupported input type for call"
+     ]
+    }
+   ],
+   "source": [
+    "from screamer import RollingMean\n",
+    "\n",
+    "obj = RollingMean(30, start_policy='expanding')\n",
+    "\n",
+    "async for c in obj(trade_feed()):\n",
+    "    print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'async_generator'>\n",
+      "['__aiter__', '__anext__', '__class__', '__class_getitem__', '__del__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__name__', '__ne__', '__new__', '__qualname__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'aclose', 'ag_await', 'ag_code', 'ag_frame', 'ag_running', 'asend', 'athrow']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = trade_feed()\n",
+    "print(type(tmp))\n",
+    "print(dir(tmp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
